--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-fade": "^1.1.1",
