--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.1.0",
     "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
+    "recharts": "^2.15.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.3",
     "swiper": "^11.1.15"
